[package]
name = "ln-regtest-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
bitcoincore-rpc = "0.19.0"
cln-rpc = "0.1.9"
fedimint-tonic-lnd = "0.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["v4"] }
